# mandelbrot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
assets/: resources.rc
include/: constants.h  framebuffer.h  palette.h  settings.h  shader.h
src/: fragment.frag  framebuffer.cpp  hello.cpp  main.cpp  passthrough.frag  settings.cpp  shader.cpp  vertex.vert
src/palettes/: palette.cpp
src/shaders/: fractal_pass.frag  palette_pass.frag  vertex.vert
